Solucion de errores e implementación del CRUD